--- a/Timer/Timer/Base.lproj/Main.storyboard
+++ b/Timer/Timer/Base.lproj/Main.storyboard
@@ -31,14 +31,23 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="peb-AO-wG5">
                                         <rect key="frame" x="0.0" y="0.0" width="119.5" height="30"/>
                                         <state key="normal" title="10秒"/>
+                                        <connections>
+                                            <action selector="tenSecButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="u4t-wD-qw7"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="96Q-KE-Fzu">
                                         <rect key="frame" x="127.5" y="0.0" width="120" height="30"/>
                                         <state key="normal" title="3分"/>
+                                        <connections>
+                                            <action selector="threeMinButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gCl-yP-CxW"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="siq-IS-5GM">
                                         <rect key="frame" x="255.5" y="0.0" width="119.5" height="30"/>
                                         <state key="normal" title="5分"/>
+                                        <connections>
+                                            <action selector="fiveMinButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2if-lm-fpy"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -54,6 +63,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="Mu6-Hj-JAx" id="Zw1-Cw-V5T"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
